--- a/khan/app.yaml
+++ b/khan/app.yaml
@@ -17,6 +17,20 @@ paths:
           required: true
           schema:
             type: string
+        - name: kind
+          in: query
+          description: The type of content (video, article, course, lesson, unit, curationpage, or domain)
+          required: false
+          schema:
+            type: string
+            enum:
+              - video
+              - article
+              - course
+              - domain
+              - lesson
+              - unit
+              - curationpage
       responses:
         '200':
           description: OK - Returns a list of relevant tutorial links
